chore: fix sonarqube